Developing and overriding UI components section

--- a/docs/faststore/docs/developing-and-overriding-components/building-sections/overview.mdx
+++ b/docs/faststore/docs/developing-and-overriding-components/building-sections/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Building and Customizing sections'
+title: 'Developing and overriding UI components'
 ---
 
 FastStore offers the ability to extend and customize your store components in the following ways:
