Delete 'Building sections' folder

--- a/docs/faststore/docs/getting-started/3-faststore-project-structure.mdx
+++ b/docs/faststore/docs/getting-started/3-faststore-project-structure.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Understanding the project structure'
+title: '3. Understanding the project structure'
 ---
 
 In the previous guide of this track, you started your first FastStore project, learned how to run a local server, and made your first changes to the storefront. Now, it is time to understand how a FastStore project is structured.
