Fixes according to the IA reviewer

--- a/docs/faststore/docs/styling/using-themes/overview.mdx
+++ b/docs/faststore/docs/styling/using-themes/overview.mdx
@@ -36,7 +36,7 @@ By configuring global and local tokens, you can create consistent visual styles 
 
 ## Brandless and the Theming structure
 
- **Brandless**, the FastStore default theme, is a themeable structure made of two complementary layers:
+ Brandless, the FastStore default theme, is a themeable structure made of two complementary layers:
  a useful and assorted library of templates for the components and sections, the **Structural Styles**, alongside a comprehensive set of design tokens to further customize them, the **Theme Layer**.
 
 These two layers are the two main parts of the theming structure:
@@ -108,7 +108,7 @@ To differentiate tokens and provide more context, additional increments can be a
 
 ## Theme (or global design tokens)
 
-Global design tokens are parameters that affect all UI look 'n' feel. They are the main configuration file of a Theme. It's constituted of three main groups:
+Global design tokens are parameters that affect all UI appearance. They are the main configuration file of a Theme. It's constituted of three main groups:
 
 1. Branding Core
 2. UI Essentials
