--- a/docs/faststore/docs/styling/global-tokens/overview.mdx
+++ b/docs/faststore/docs/styling/global-tokens/overview.mdx
@@ -2,7 +2,7 @@
 title: 'Global Tokens'
 ---
 
-Design Tokens are parameters that affect all UI look 'n' feel, and they are the main configuration file of a Theme. Component-specific tokens often inherit from global tokens but are named specifically to apply those tokens in component development.
+Design Tokens are parameters that affect the overall UI appearance, and they are the main configuration file of a Theme. Component-specific tokens often inherit from global tokens but are named specifically to apply those tokens in component development.
 
 ## Global Tokens
 
