--- a/docs/faststore/components/storefront-features/overview.mdx
+++ b/docs/faststore/components/storefront-features/overview.mdx
@@ -3,29 +3,51 @@ title: "Implementing storefront features"
 excerpt: ""
 ---
 
-Features are a set of storefront components that combine more than one [organism](https://developers.vtex.com/docs/guides/faststore/organisms-overview) or [molecule](https://developers.vtex.com/docs/guides/faststore/molecules-overview) to create elements that enhance the overall user experience
-related to store navigation and regionalization.
+Storefront features are solutions that help you implement ecommerce functionality in your FastStore project. These features combine multiple [UI components](https://developers.vtex.com/docs/guides/faststore/components-index) and best practices to enhance the shopping experience for customers.
+
+---
 
 <Flex>
 
   <WhatsNextCard
-  title="Navigation"
-  description="Enables customers to navigate among the store pages."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/features-navigation"
-  linkTitle="See more"
-  />
- 
-  <WhatsNextCard
-  title="Search"
-  description="Enables customer navigation and enhances search functionality."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/features-search"
+  title="Adding third-party scripts"
+  description=""
+  linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-feature-handling-third-party-scripts"
   linkTitle="See more"
   />
 
   <WhatsNextCard
-  title="Regionalization"
+  title="Building navigation menus"
+  description="Enables customers to navigate among the store pages."
+  linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-building-navigation-menus"
+  linkTitle="See more"
+  />
+
+  <WhatsNextCard
+  title="Displaying content for authenticated users"
+  description=""
+  linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-displaying-content-for-authenticated-users"
+  linkTitle="See more"
+  />
+
+  <WhatsNextCard
+  title="Implementing regionalization features"
   description="Enables customers to set a location using a valid Postal Code."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/features-regionalization"
+  linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-implementing-regionalization-features"
+  linkTitle="See more"
+  />
+
+  <WhatsNextCard
+  title="Implementing search features"
+  description="Enables customer navigation and enhances search functionality."
+  linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-implementing-search-features"
+  linkTitle="See more"
+  />
+
+  <WhatsNextCard
+  title="Managing product images in specific contexts"
+  description=""
+  linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-managing-product-images-in-specific-contexts"
   linkTitle="See more"
   />
 
