--- a/docs/faststore/docs/developer-tools/overview.mdx
+++ b/docs/faststore/docs/developer-tools/overview.mdx
@@ -2,10 +2,24 @@
 title: "Developer tools"
 ---
 
-This section provides documentation and guides for tools that help you develop, test, and maintain FastStore projects. Below you’ll find an overview of the available tools and configuration options.
+This section provides guides for tools to help you develop, test, and maintain FastStore projects. Below you’ll find an overview of the available tools and configuration options.
 Explore the following guides for more details on setup, usage, and best practices.
 
 <Flex>
+
+<WhatsNextCard
+  linkTo="/docs/guides/faststore/developer-tools-config-options"
+  title="Configuration Options for discovery.config.js"
+  description="Detailed explanation of all configuration options available in the `discovery.config.js` file, including SEO, API, session, cart, analytics, and more."
+  linkTitle="See more"
+/>
+
+<WhatsNextCard
+  linkTo="/docs/guides/faststore/developer-tools-custom-cypress"
+  title="Custom Cypress Integration"
+  description="Learn how to enable and use custom Cypress tests in your FastStore project, including experimental features and configuration."
+  linkTitle="See more"
+/>
 
 <WhatsNextCard
   linkTo="/docs/guides/faststore/developer-tools-faststore-cli"
@@ -18,20 +32,6 @@ Explore the following guides for more details on setup, usage, and best practice
   linkTo="/docs/guides/faststore/developer-tools-updating-the-cli-package-version"
   title="Updating the '@faststore/cli' package version"
   description="Instructions for updating the FastStore CLI package in your project."
-  linkTitle="See more"
-/>
-
-<WhatsNextCard
-  linkTo="/docs/guides/faststore/developer-tools-custom-cypress"
-  title="Custom Cypress Integration"
-  description="Learn how to enable and use custom Cypress tests in your FastStore project, including experimental features and configuration."
-  linkTitle="See more"
-/>
-
-<WhatsNextCard
-  linkTo="/docs/guides/faststore/developer-tools-config-options"
-  title="Configuration Options for discovery.config.js"
-  description="Detailed explanation of all configuration options available in the `discovery.config.js` file, including SEO, API, session, cart, analytics, and more."
   linkTitle="See more"
 />
 
