Developer tools: fix Cypress title

--- a/docs/faststore/docs/developer-tools/overview.mdx
+++ b/docs/faststore/docs/developer-tools/overview.mdx
@@ -16,7 +16,7 @@ Explore the following guides for more details on setup, usage, and best practice
 
 <WhatsNextCard
   linkTo="/docs/guides/faststore/developer-tools-custom-cypress"
-  title="Custom Cypress Integration"
+  title="Custom Cypress integration"
   description="Learn how to enable and use custom Cypress tests in your FastStore project, including experimental features and configuration."
   linkTitle="See more"
 />
