--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -1,11 +1,13 @@
 ---
 title: "Managing content with 'scopes' and 'requiredScopes'"
 slug: "managing-content-with-scopes-and-requiredscopes"
-hidden: false
+hidden: true
 createdAt: "2024-07-29T14:00:15.623Z"
 updatedAt: "2024-08-29T15:12:15.623Z"
 excerpt: "Use 'scopes' and 'requiredScopes' to define which store sections can be added to specific pages, ensuring proper content structure for your store."
 ---
+
+> ⚠️ This feature is only available for [FastStore v1](https://v1.faststore.dev/docs)
 
 `scopes` and `requiredScopes` are Headless CMS schema definitions that determine which store sections can be added to specific pages (defined within [Content Types](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-2-adding-content-types-to-the-headless-cms)).
 
