--- a/docs/localization/newsletter.mdx
+++ b/docs/localization/newsletter.mdx
@@ -385,23 +385,23 @@ To create the `NL` entity, follow the instructions below based on the method you
     <details>
     <summary><b>Field 2</b></summary>
 
-    This field will indicate whether the user chooses to receive the newsletter or not.
+This field will indicate whether the user will receive the newsletter.
 
-    1. Click `New Field` and complete the field with the following values:
+1. Click `New field` and complete the field with the following values:
     
-        | **Name**          | **Display Name**    | **Type** |
-        | ----------------- | ------------------- | -------- |
-        | isNewsletterOptIn | Receive newsletter? | Boolean  |
+| **Name** | **Display Name** | **Type** |
+| ----------------- | ------------------- | -------- |
+| isNewsletterOptIn | Receive newsletter? | Boolean |
 
-    2. Click the gear icon (⚙️) to open the field configuration options and check all the following options:
+2. Click the gear icon ⚙️ to open the field configuration options and check all the following options:
 
-        - **Make readable without credentials**
-        - **Allow editing without credentials**
-        - **Allow filtering without credentials**
+- **Make readable without credentials**
+- **Allow editing without credentials**
+- **Allow filtering without credentials**
 
-    3. In the **Search and filter settings** section, check the **Is searchable?** and **Is filterable?** options.
+3. In the **Search and filter settings** section, check the **Is searchable?** and **Is filterable?** options.
       
-      ![newsletter-field-2](https://vtexhelp.vtexassets.com/assets/docs/src/newsletter-field-2___62281c88b10436ce052707080cc5173e.png)
+![newsletter-field-2](https://vtexhelp.vtexassets.com/assets/docs/src/newsletter-field-2___62281c88b10436ce052707080cc5173e.png)
 
     </details>
 
@@ -429,15 +429,15 @@ To create the `NL` entity, follow the instructions below based on the method you
     </details>
 
 7. Click `Save` and you will be redirected back to the Data Entity tab.
-8. In the row of the new `NL` entity, click the diskette (💾) to publish the created data entity.
+8. In the row of the new `NL` entity, click the diskette 💾 to publish the created data entity.
 9. Click `OK`.
 10. Click the **Applications** tab to return to the Master Data homepage.
-11. Click `Reload Applications`.
+11. Click `Reload applications`.
 
 ### Creating via API
 
 You can also create the Newsletter data entity using the [Create partial document](https://developers.vtex.com/docs/api-reference/masterdata-api#patch-/api/dataentities/-acronym-/documents) endpoint.
 
-To create the three fields for the Newsletter data entity, see the [Create document with custom ID or update entire document](https://developers.vtex.com/docs/api-reference/masterdata-api#put-/api/dataentities/-acronym-/documents/-id-) endpoint reference. 
+To create the three fields for the Newsletter data entity, see the [Create document with custom ID or update entire document](https://developers.vtex.com/docs/api-reference/masterdata-api#put-/api/dataentities/-acronym-/documents/-id-) endpoint reference.
 
 > ⚠️ The field information must be the same as described in [Creating via Admin](#creating-via-admin).
