--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -92,8 +92,8 @@ When [creating custom sections](https://developers.vtex.com/docs/guides/faststor
 
 | `requiredScopes` name | Section name |
 | --------------------- | ------------ |
-|`custom`|`CrossSelingShelf`|
-|`pdp`|`CrossSelingShelf`, `Breadcrumb`, and `ProductDetails`|
+|`custom`|`CrossSellingShelf`|
+|`pdp`|`CrossSellingShelf`, `Breadcrumb`, and `ProductDetails`|
 |`plp`|`Breadcrumb` and `ProductGallery`|
 |`search`|`ProductGallery`|
 
