--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -4,14 +4,14 @@ slug: "managing-content-with-scopes-and-requiredscopes"
 hidden: true
 createdAt: "2024-07-29T14:00:15.623Z"
 updatedAt: "2024-08-29T15:12:15.623Z"
-excerpt: "Use 'scopes' and 'requiredScopes' to define which store sections can be added to specific pages, ensuring proper content structure for your store."
+excerpt: "Use `scopes` and `requiredScopes` to define which store sections can be added to specific pages, ensuring proper content structure for your store."
 ---
 
 > ⚠️ This feature is only available for [FastStore v1](https://v1.faststore.dev/docs).
 
 `scopes` and `requiredScopes` are Headless CMS schema definitions that determine which store sections can be added to specific pages (defined within [Content Types](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-2-adding-content-types-to-the-headless-cms)).
 
-These features help manage the content structure and ensure store sections are used in appropriate contexts. For example, the [Hero](https://developers.vtex.com/docs/guides/faststore/organisms-hero) component is only available for the home page or pages like the Product Details Page (PDP).
+These features help manage the content structure and ensure store sections are used in appropriate contexts. For example, the [Hero](https://developers.vtex.com/docs/guides/faststore/organisms-hero) component is only available for the homepage or pages like the Product Details Page (PDP).
 
 ## Before you begin
 
@@ -43,7 +43,7 @@ The `scopes` are string arrays within the definition of your Content Type in the
 }
 ```
 
-In this example, the `Home` Content Type stores content for your home page and has a `home` scope. This `scopes` definition means that only sections designed for the home page context can be used with this Content Type.
+In this example, the `Home` Content Type stores content for your homepage and has a `home` scope. This `scopes` definition means that only sections designed for the home page context can be used with this Content Type.
 
 ### Default FastStore `scopes`
 
@@ -210,7 +210,7 @@ We defined that the `Call To Action` section will only be available for `customP
 
 > ℹ️ The `Call To Action` section is also available for use with the `landingPage` Content Type because the [`custom` scope is FastStore's default](#default-faststore-scopes).
 
-When editing the `Custom Page` Content Type, the Headless CMS checks its scopes (`custom`) and matches them against the sections' `requiredScopes` (`custom`). Since the Call to Action section matches the Custom Page and Landing Page scope, the section is available for use in these two Content Types.
+When editing the `Custom Page` Content Type, the Headless CMS checks its scopes (`custom`) and matches them against the sections' `requiredScopes` (`custom`). Since the Call to Action section matches the `custom` scope (which is present in both the Custom Page and Landing Page Content Types), the section is available for use in these two Content Types.
 
 ### Syncing the Headless CMS changes
 
