Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/organisms/newsletter.mdx
+++ b/docs/faststore/components/organisms/newsletter.mdx
@@ -363,7 +363,7 @@ To create the `NL` entity, follow the instructions below based on the method you
 
     This field will store the customer's email address for newsletter subscription. 
 
-    1. Click `New Field` and complete the field with the following values:
+    1. Click `New Field` and complete the fields with the following values:
     
         | **Name**   | **Display Name** | **Type** |
         | ---------- | ---------------- | -------- |
@@ -387,7 +387,7 @@ To create the `NL` entity, follow the instructions below based on the method you
 
     This field will indicate whether the user will receive the newsletter.
 
-    1. Click `New field` and complete the field with the following values:
+    1. Click `New field` and complete the fields with the following values:
         
       | **Name** | **Display Name** | **Type** |
       | ----------------- | ------------------- | -------- |
