--- a/docs/faststore/components/organisms/newsletter.mdx
+++ b/docs/faststore/components/organisms/newsletter.mdx
@@ -410,7 +410,7 @@ To create the `NL` entity, follow the instructions below based on the method you
 
     This field will store the user’s name. 
 
-    1. Click `New Field` and complete the field with the following values:
+    1. Click `New Field` and complete the fields with the following values:
 
         | **Name** | **Display Name** | **Type**     |
         | -------- | ---------------- | ------------ |
