update(delivery-promise.mdx): callout

--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -2,7 +2,7 @@
 title: "Delivery Promise"
 ---
 
->ℹ This feature is in closed beta, available only for selected customers.
+>ℹ This feature is in closed beta, which means that only selected customers can access it. If you are interested in implementing it in the future, please contact our [Support](https://support.vtex.com/hc/en-us) team.
 
 In this guide, you’ll learn how to configure Delivery Promise in your FastStore project.
 
