Add custom contet type limitations

--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -1,13 +1,11 @@
 ---
 title: "Managing content with `scopes` and `requiredScopes`"
 slug: "managing-content-with-scopes-and-requiredscopes"
-hidden: true
+hidden: false
 createdAt: "2024-07-29T14:00:15.623Z"
 updatedAt: "2024-08-29T15:12:15.623Z"
 excerpt: "Use `scopes` and `requiredScopes` to define which store sections can be added to specific pages, ensuring proper content structure for your store."
 ---
-
-> ⚠️ This feature is only available for [FastStore v1](https://v1.faststore.dev/docs).
 
 `scopes` and `requiredScopes` are Headless CMS schema definitions that determine which store sections can be added to specific pages (defined within [Content Types](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-2-adding-content-types-to-the-headless-cms)).
 
@@ -24,6 +22,10 @@ Make sure you have `@faststore/core` version `3.0.18` or greater to benefit from
 ### Set Headless CMS
 
 Make sure to have set the Headless CMS files `content-types.json` and `sections.json` in your store project by following the [Setting up the Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-2-setting-up-the-headless-cms) guide. These files contain the store’s custom Content Types and sections.
+
+### Understand FastStore customization options
+
+While FastStore doesn’t support custom Content Types, you can create [custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section). To control where these sections appear, use the `requiredScopes` property. Your custom sections will use the same scopes as FastStore’s default Content Types, ensuring consistency with the existing structure.
 
 </Steps>
 
@@ -58,11 +60,15 @@ When [creating custom sections](https://developers.vtex.com/docs/guides/faststor
 |`plp`|Product Listing Page|
 |`search`|Search Page|
 
+>⚠️ [Custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section) must use these predefined `scopes` in their `requiredScopes`. This ensures they integrate with FastStore's content architecture.
+
 ## `requiredScopes`
 
 `requiredScopes` defines the Content Types a section can be used in. Similar to `scopes`, `requiredScopes` are specified as string arrays within the section definition in the [`sections.json` file](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-3-adding-sections-to-the-headless-cms).
 
 A section is only available for a Content Type in Headless CMS if the Content Type's `scopes` include at least one matching `scope` from the section's `requiredScopes`. Sections with an empty `requiredScopes` array can be used in any Content Type.
+
+>⚠️ While you can define `requiredScopes` for [custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section), they must use scopes from [default Content Types](#default-faststore-scopes) to maintain consistency across all store sections.
 
 In the following example, the [`ProductShelf` section](https://developers.vtex.com/docs/guides/faststore/organisms-product-shelf) is only available for PDPs:
 
