--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -17,7 +17,7 @@ These features help manage the content structure and ensure store sections are u
 
 ### Update the `@faststore/core` package version
 
-Make sure you have `@faststore/core` version `3.0.18` or greater to benefit from this feature. If you don't have the updated package, follow the instructions in [Updating the `@faststore/core` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-core-package-version).
+Make sure you have `@faststore/core` version `3.0.18` or greater to benefit from this feature. If you do not have the updated package, follow the instructions in [Updating the `@faststore/core` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-core-package-version).
 
 ### Set Headless CMS
 
@@ -64,7 +64,7 @@ When [creating custom sections](https://developers.vtex.com/docs/guides/faststor
 
 ## `requiredScopes`
 
-`requiredScopes` defines the Content Types a section can be used in. Similar to `scopes`, `requiredScopes` are specified as string arrays within the section definition in the [`sections.json` file](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-3-adding-sections-to-the-headless-cms).
+`requiredScopes` define the Content Types a section can be used in. Similar to `scopes`, `requiredScopes` are specified as string arrays within the section definition in the [`sections.json` file](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-3-adding-sections-to-the-headless-cms).
 
 A section is only available for a Content Type in Headless CMS if the Content Type's `scopes` include at least one matching `scope` from the section's `requiredScopes`. Sections with an empty `requiredScopes` array can be used in any Content Type.
 
@@ -82,7 +82,7 @@ In the following example, the [`ProductShelf` section](https://developers.vtex.c
 
 ### Empty `requiredScopes`
 
-When a section has an empty `requiredScopes` (`[]`), the section is available for all Content Types. In the following example, the [`Navbar` section](https://developers.vtex.com/docs/guides/faststore/organisms-navbar) is available to use in any Content Type because it has no required `scopes`:
+When a section has an empty `requiredScopes` (`[]`), the section is available for all Content Types. In the following example, the [`Navbar` section](https://developers.vtex.com/docs/guides/faststore/organisms-navbar) is available for use in any Content Type because it has no required `scopes`:
 
 ```json
 {
@@ -105,7 +105,7 @@ When [creating custom sections](https://developers.vtex.com/docs/guides/faststor
 
 ## Using `scopes` and `requiredScopes`
 
-In the following example, let’s set a new Content Type `Custom Page` to display a new `Call To Action` section.
+In the following example, we will set a new Content Type `Custom Page` to display a new `Call To Action` section.
 
 ![create-custom-page](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-sections-final-result___0b7a9ad190b98753b7a99edec657f3f5.png)
 
