Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -21,7 +21,7 @@ Make sure you have `@faststore/core` version `3.0.18` or greater to benefit from
 
 ### Set Headless CMS
 
-Make sure to have set the Headless CMS files `content-types.json` and `sections.json` in your store project by following the [Setting up the Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-2-setting-up-the-headless-cms) guide. These files contain the store’s custom Content Types and sections.
+Make sure to have set up the Headless CMS files `content-types.json` and `sections.json` in your store project by following the [Setting up the Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-2-setting-up-the-headless-cms) guide. These files contain the store’s custom Content Types and sections.
 
 ### Understand FastStore customization options
 
@@ -45,7 +45,7 @@ The `scopes` are string arrays within the definition of your Content Type in the
 }
 ```
 
-In this example, the `Home` Content Type stores content for your homepage and has a `home` scope. This `scopes` definition means that only sections designed for the home page context can be used with this Content Type.
+In this example, the `Home` Content Type stores content for your homepage and has a `home` scope. This `scope` definition means that only sections designed for the homepage context can be used with this Content Type.
 
 ### Default FastStore `scopes`
 
