--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -105,7 +105,7 @@ When [creating custom sections](https://developers.vtex.com/docs/guides/faststor
 
 ## Using `scopes` and `requiredScopes`
 
-In the following example, we will set a new Content Type `Custom Page` to display a new `Call To Action` section.
+In the following example, we will set up a new Content Type `Custom Page` to display a new `Call To Action` section.
 
 ![create-custom-page](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-sections-final-result___0b7a9ad190b98753b7a99edec657f3f5.png)
 
