--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -135,27 +135,6 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ### Variants
 
-#### Big
-
-<OverviewSection>
-  <Badge size="big">Big Badge</Badge>
-</OverviewSection>
-
-```tsx
-<Badge size="big">Big Badge</Badge>
-```
-
-<TokenTable>
-  <TokenRow
-    token="--fs-badge-big-text-size"
-    value="var(--fs-text-size-legend)"
-  />
-  <TokenRow
-    token="--fs-badge-big-padding"
-    value="var(--fs-spacing-1) var(--fs-spacing-2)"
-  />
-</TokenTable>
-
 #### Neutral
 
 <OverviewSection>
@@ -324,6 +303,41 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
     token="--fs-badge-danger-border-color"
     value="var(--fs-color-danger-bkg)"
     isColor
+  />
+</TokenTable>
+
+---
+
+## Size
+
+#### Small
+
+<OverviewSection>
+  <Badge size="small">Small Badge</Badge>
+</OverviewSection>
+
+```tsx
+<Badge size="small">Small Badge</Badge>
+```
+
+#### Big
+
+<OverviewSection>
+  <Badge size="big">Big Badge</Badge>
+</OverviewSection>
+
+```tsx
+<Badge size="big">Big Badge</Badge>
+```
+
+<TokenTable>
+  <TokenRow
+    token="--fs-badge-big-text-size"
+    value="var(--fs-text-size-legend)"
+  />
+  <TokenRow
+    token="--fs-badge-big-padding"
+    value="var(--fs-spacing-1) var(--fs-spacing-2)"
   />
 </TokenTable>
 
