Fix 'Size' section

--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -308,9 +308,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Size
+### Size
 
-#### Small
+#### Small (Default)
 
 <OverviewSection>
   <Badge size="small">Small Badge</Badge>
