Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/routing/enabling-url-redirects.mdx
+++ b/docs/faststore/docs/routing/enabling-url-redirects.mdx
@@ -24,7 +24,7 @@ Update your FastStore project to version 3.2.0 or higher. To do this, follow the
 
 1. Open your FastStore project in your preferred code editor and navigate to the `discovery.config.js` file in the project directory.
 2. Open the `discovery.config.js` file.
-3. Within the `experimental` section, add `enableRedirects: true` to enable the redirects function in the project, for example:
+3. Within the `experimental` section, add `enableRedirects: true` to enable the redirects feature in the project, for example:
 
     ```discovery.config.js
     …
