Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/routing/enabling-url-redirects.mdx
+++ b/docs/faststore/docs/routing/enabling-url-redirects.mdx
@@ -36,6 +36,6 @@ Update your FastStore project to version 3.2.0 or higher. To do this, follow the
     …
     ```
 
-4. Run `yarn dev` to see if any errors occur before deploying this change to production.
+4. Run `yarn dev` to check for errors before deploying this change to production.
 5. Create a new branch and open a pull request to deploy the changes made in the `discovery.config.js` file to production.
 6. Once the change is live, you can begin managing the store’s redirects in VTEX Admin by following the instructions in [Managing URL redirects](https://help.vtex.com/tutorial/managing-url-redirects--3UJuFrU8imSVWg134mkvJV)
